objects/BotDefinition_Home__dll.object
<CustomObject>
    <fields>
        <fullName>AgentType__c</fullName>
        <label>Type of Copilot</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeveloperName__c</fullName>
        <label>Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Bot ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <label>Deleted</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_Id__c</fullName>
        <label>KQ_Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MasterLabel__c</fullName>
        <label>Bot Definition Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SfdcOrganizationId__c</fullName>
        <label>SfdcOrganizationId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <label>System Modstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_SourceVersion__c</fullName>
        <label>cdp_sys_SourceVersion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>